Bug 790043: Make nsDeviceStorage consistent on using PRTime for all of its "aSince" / "mSince" vars. r=dougt